k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-frontend-service
            port:
              number: 80
          # serviceName: todo-frontend-service
          # servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /api/
spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 5000

# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-todo-backend-service
#   annotations:
#     # use the shared ingress-nginx
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /api/?(.*)
#         backend:
#           serviceName: todo-backend-service
#           servicePort: 5000

# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-todo-backend-service
#   annotations:
#     # use the shared ingress-nginx
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /?(.*)
#             backend:
#               serviceName: todo-frontend-service
#               servicePort: 80
#           - path: /api/?(.*)
#             backend:
#               serviceName: todo-backend-service
#               servicePort: 8080
